--- a/main/templates/main/register.html
+++ b/main/templates/main/register.html
@@ -6,13 +6,13 @@
 
 <!--Register-->
 <div class="container py-5">
-    <h1>Rejestracja</h1>
+    <h1>Register</h1>
     <form method="POST">
         {% csrf_token %}
         {{ register_form|crispy }}
-        <button class="btn btn-primary" type="submit">Zarejestruj</button>
+        <button class="btn btn-primary" type="submit">Register</button>
     </form>
-    <p class="text-center">Masz już konto? <a href="/login">Zaloguj się</a></p>
+    <p class="text-center">If you already have an account, <a href="/login">login</a> instead.</p>
 </div>
 
 {% endblock %}
