--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,1 +1,8 @@
-<p>Hello world!</p>
+{% extends 'main/header.html' %}
+
+  {% block content %}
+
+  <!--CTA-->
+  <h1>Hello world!</h1>
+
+  {% endblock %}
