--- a/main/templates/main/header.html
+++ b/main/templates/main/header.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     {% include 'main/includes/messages.html' %}
+    {% include 'main/includes/navbar.html' %}
     {% block content %}
 
     {% endblock %}
