--- a/main/templates/main/includes/navbar.html
+++ b/main/templates/main/includes/navbar.html
@@ -14,7 +14,10 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Welcome, {{user.username}}</a>
           </li>
-
+          <li class="nav-item">
+            <!--wallet balance-->
+            <a class="nav-link" href="#">Wallet: {{user.wallet.balance}}</a>
+          </li>
           {% else %}
 
           <li class="nav-item">
