--- a/main/templates/main/chargeWallet.html
+++ b/main/templates/main/chargeWallet.html
@@ -6,7 +6,7 @@
 {% load crispy_forms_tags %}
 
 <div class="container py-5">
-  <h1>Place order</h1>
+  <h1>Charge wallet</h1>
   <form method="POST">
     {% csrf_token %}
     {{ form|crispy }}
