--- a/main/templates/main/includes/navbar.html
+++ b/main/templates/main/includes/navbar.html
@@ -1,22 +1,21 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="{% url 'main:homepage' %}">Navbar</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="False" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
           {% if user.is_authenticated %}
-
-          <li class="nav-item">
-            <a class="nav-link" href="/logout">Logout</a>
-          </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Welcome, {{user.username}}</a>
           </li>
           <li class="nav-item">
             <!--wallet balance-->
-            <a class="nav-link" href="#">Wallet: {{user.wallet.balance}}</a>
+            <a class="nav-link" href="/wallet">Wallet: {{user.wallet.balance}}</a>
+          </li>
+           <li class="nav-item">
+            <a class="nav-link" href="/logout">Logout</a>
           </li>
           {% else %}
 
