--- a/main/templates/main/includes/navbar.html
+++ b/main/templates/main/includes/navbar.html
@@ -11,7 +11,9 @@
             <a class="nav-link" href="#">Welcome, {{user.username}}</a>
           </li>
           <li class="nav-item">
-            <!--wallet balance-->
+            <a class="nav-link" href="/order">Place order</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/wallet">Wallet: {{user.wallet.balance}}</a>
           </li>
            <li class="nav-item">
