--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,7 +1,19 @@
 {% extends 'main/header.html' %}
 
   {% block content %}
-  <!--CTA-->
-  <h1>Hello world!</h1>
-
+  {% if user.is_authenticated %}
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <a href="/order" class="btn btn-primary btn-lg btn-block">Place Order</a>
+            </div>
+            <div class="col-md-4">
+                <a href="/wallet" class="btn btn-primary btn-lg btn-block">Charge Wallet</a>
+            </div>
+            <div class="col-md-4">
+                <a href="/orders" class="btn btn-primary btn-lg btn-block">Orders Status</a>
+            </div>
+        </div>
+    </div>
+  {% endif %}
   {% endblock %}
