--- a/main/templates/main/includes/navbar.html
+++ b/main/templates/main/includes/navbar.html
@@ -7,24 +7,25 @@
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
           {% if user.is_authenticated %}
-          <li class="nav-item">
-            <a class="nav-link" href="#">Welcome, {{user.username}}</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/order">Place order</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/wallet">Wallet: {{user.wallet.balance}}</a>
-          </li>
-           <li class="nav-item">
-            <a class="nav-link" href="/logout">Logout</a>
-          </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Welcome, {{user.username}}</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/order">Place order</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/orders">My orders</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/wallet">Wallet: {{user.wallet.balance}}</a>
+              </li>
+               <li class="nav-item">
+                <a class="nav-link" href="/logout">Logout</a>
+              </li>
           {% else %}
-
-          <li class="nav-item">
-            <a class="nav-link" href="/login">Login</a>
-          </li>
-
+              <li class="nav-item">
+                <a class="nav-link" href="/login">Login</a>
+              </li>
           {% endif %}
         </ul>
       </div>
