Added url at order summary

--- a/main/templates/main/orderSummary.html
+++ b/main/templates/main/orderSummary.html
@@ -15,6 +15,7 @@
         <li>Service description: {{ orderData.service.description }}</li>
         <li>Service quantity: {{ orderData.quantity }}</li>
         <li>Service price: {{ orderData.price }}</li>
+        <li>Service url: {{ orderData.url }}</li>
     </ul>
     <button type="submit" class="btn btn-primary">Confirm</button>
   </form>
